--- a/app/src/main/res/layout/game_full_screen.xml
+++ b/app/src/main/res/layout/game_full_screen.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -60,8 +66,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Streaming now"
-            android:textSize="20dp"
+            android:text="@string/preview"
+            android:textSize="20sp"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="60dp"
             android:textStyle="bold"
@@ -141,27 +147,63 @@
         </LinearLayout>
 
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/rating"
+        android:layout_margin="10dp"
+        android:layout_below="@+id/rate">
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:id="@+id/rating_bar"
+            android:src="@drawable/ic_launcher_background"
+            android:scaleType="centerCrop"
+            android:padding="10dp"
+            android:background="@drawable/radius"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textLeft"
+            android:text="@string/rating"
+            android:textSize="100sp"
+            android:layout_toRightOf="@+id/rating_bar"
+            android:layout_marginTop="10dp"
+            android:padding="5dp"
+            />
+
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:id="@+id/stars"
+            android:src="@drawable/ic_launcher_background"
+            android:scaleType="centerCrop"
+            android:layout_toRightOf="@+id/rating_bar"
+            android:layout_below="@+id/textLeft"
+            android:background="@drawable/radius"
+            />
+
+    </RelativeLayout>
 
 
-
-
-
-
-    </LinearLayout>
 
     <GridLayout
 
-
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/buttons"
-        android:layout_below="@id/rate">
+        android:layout_below="@id/rating"
+>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/downloadBtn"
             android:text="@string/download"
-            android:textSize="30dp"
+            android:textSize="30sp"
             android:background="@drawable/radius"
             android:layout_marginLeft="20dp"
 
@@ -183,3 +225,5 @@
 
 
 </RelativeLayout>
+
+</ScrollView>
